--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,23 @@
-APP_NAME=Laravel
+APP_NAME="Store Mapper"
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://storemapper.test
+APP_SERVICE="storemapper.test"
+APP_PORT=8080
+
+COMPOSE_PROJECT_NAME="storemapper"
 
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=store_mapper
-DB_USERNAME=root
-DB_PASSWORD=
+DB_FORWARD_PORT=3380
+DB_DATABASE=storemapper_db
+DB_USERNAME=storemapper_admin
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
