Add config and .env values for map center coordinates

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ APP_PORT=8080
 
 COMPOSE_PROJECT_NAME="storemapper"
 
+MAP_CENTER_LAT=39.5
+MAP_CENTER_LON=-98.35
+
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
